<resources>
    <string name="app_name">Context Recognition User Test</string>


    <string name="action_settings">Info</string>
    <!-- labels -->
    <string name="current_context">Current Context</string>
    <string name="current_activity">Current Activity</string>
    <string name="current_location">Current Location</string>
    <string name="current_time">Current Time</string>
    <string name="current_weather">Current Weather</string>
    <string name="current_temperature">Current Temp</string>
    <string name="current_season">Current Season</string>
    <string name="context_name">Name</string>
    <string name="context_activity">Activity</string>
    <string name="context_location">Location</string>
    <string name="context_time">Time</string>
    <string name="context_duration">Duration</string>
    <string name="context_weather">Weather</string>
    <string name="context_temperature">Temperature</string>
    <string name="context_season">Season</string>

    <!-- buttons -->
    <string name="view_contexts">View Contexts</string>
    <string name="add_context">Add Context</string>

    <!-- messages -->
    <string name="add_geofences_result_success"> Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_unknown">Unknown transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_notification_title">%1$s geofence(s) %2$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="remove_geofences_intent_success">Removing of all geofences succeeded.</string>
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s.</string>
    <string name="remove_geofences_id_failure">Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_log">Log</string>
    <!-- geofence error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_context">AddContext</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_contexts">ViewContexts</string>
    <string name="title_activity_individual_context_view">IndividualContextView</string>
    <string name="title_activity_add_location_map">AddLocationMap</string>
</resources>
